# gcp-ai-hackathon-2025

./: .gitignore  .requirements.txt  IDEA.md  Makefile  README.md  deployment_metadata.json  env.example  example_interaction.md  pyproject.toml  test_image_generation.py  test_mvp.py
ai_tutor/: __init__.py  agent.py  agent_engine_app.py
ai_tutor/tools/: __init__.py  assessment.py  content.py  evaluation.py  image_generation.py  persistence.py  research.py  roadmap.py
ai_tutor/utils/: deployment.py  expose_app.py  tracing.py  typing.py
deployment/: deploy.py
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
frontend/: package-lock.json
